# TextViewer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  resources.rc  text.txt  textlong.txt
include/: InputHandle.h  Model.h  Scroll.h  SupportModule.h  View.h  menu.h
src/: InputHandle.c  Model.c  Scroll.c  SupportModule.c  View.c  main.c
